cattlevax-sf-sandbox/force-app/main/default/objects/APHA_GOVUKNotifyAPIKey__mdt/APHA_GOVUKNotifyAPIKey__mdt.object-meta.xml
<CustomObject>
    <label>GOV.UK Notify API Key</label>
    <pluralLabel>GOV.UK Notify API Keys</pluralLabel>
</CustomObject>