cattlevax-sf-sandbox/force-app/main/default/objects/APHA_GOVUKNotifyAPIKey__mdt/fields/APHA_APIKeyName__c.field-meta.xml
<CustomField>
    <fullName>APHA_APIKeyName__c</fullName>
    <label>API Key Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>