cattlevax-sf-sandbox/force-app/main/default/objects/APHA_GOVUKNotifyAPIKey__mdt/fields/APHA_BaseURL__c.field-meta.xml
<CustomField>
    <fullName>APHA_BaseURL__c</fullName>
    <label>Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>