cattlevax-sf-sandbox/force-app/main/default/objects/APHA_GOVUKNotifyAPIKey__mdt/fields/APHA_SecretKey__c.field-meta.xml
<CustomField>
    <fullName>APHA_SecretKey__c</fullName>
    <label>Secret Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>