cattlevax-sf-sandbox/force-app/main/default/objects/APHA_GOVUKNotifyAPIKey__mdt/fields/APHA_ServiceId__c.field-meta.xml
<CustomField>
    <fullName>APHA_ServiceId__c</fullName>
    <label>Service Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>